# AGI-Server

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  AGENTS.md  AGI_PHYSICS_TEST_WITH_LEARNING.py  AGI_PROOF_COMPLETE.md  AGI_PROOF_STEP_1_ARCHITECTURE.md  AGI_TEST_ARCHITECTURE.py  AGI_TEST_HARD_PHYSICS.py  CHANGELOG.md  CLAUDE.md  CNAME  CRITICAL_FINDING_DENSE_STATE.md  Dockerfile  Dockerfile.cicd  Dockerfile.gpia  Gemfile  Github directive for gemini.txt  IDE_MEMORY.md  IMPLEMENTATION_SUMMARY.md  INTERNET_READINESS_PROOF.md  LICENSE  LICENSING.md  Makefile  NOTICE  PHYSICS_ANSWER_ANALYSIS.md  PIO_PATCH_PLAN.md  PRE_INSTALL.md  README.md  STANDALONE_APPLICATIONS_EVALUATION.md  SYSTEM_STANDARD_REFINEMENT.md  SYSTEM_STATUS.md  Skills Additional License  Sovereign_AGI_Audit_Report.md  USER_VISION_TO_REALITY.md  _config.yml  adaptive_rh_solver.py  admin_policy.py  (+98 more)
src/iias/: README.md  __init__.py  applications.json  badges.py  constants.py  genesis.py  pyproject.toml  router.py  setup.py
src/iias/apps/: __init__.py
src/iias/apps/ai_ml/: __init__.py  agent_coordinator.py  attention_allocator.py  context_manager.py  inference_router.py
src/iias/apps/business/: __init__.py  billing_calculator.py  resource_allocator.py  sla_monitor.py  task_scheduler.py
src/iias/apps/communication/: __init__.py  compression_engine.py  message_router.py  protocol_selector.py  sync_manager.py
src/iias/apps/data/: __init__.py  backup_scheduler.py  cache_invalidator.py  data_tiering.py  replication_manager.py
src/iias/brahim_iias.egg-info/: PKG-INFO  SOURCES.txt
(+2251 files in other folders)
