[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brahim-iias"
version = "1.0.0"
authors = [
    {name = "Elias Oulad Brahim", email = "obe@cloudhabil.com"}
]
description = "Intelligent Infrastructure as a Service - Deterministic AI resource allocation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "infrastructure", "npu", "gpu", "optimization"]

[project.urls]
"Homepage" = "https://github.com/asios/iias-framework"
"Documentation" = "https://github.com/asios/iias-framework#readme"

[tool.setuptools.packages.find]
where = ["."]
